# UnityGLTF

./: .gitignore
GLTFSerialization/: CMakeLists.txt  GLTFSerialization.sln  UpgradeLog.htm
GLTFSerialization/GLTFSerialization/: CMakeLists.txt  GLTFSerialization.csproj
GLTFSerialization/GLTFSerialization/Extensions/: UNITY_k12_sequenceExtension.cs  UNITY_k12_sequenceExtensionFactory.cs
GLTFSerialization/GLTFSerialization/Schema/: GLTFProperty.cs  Node.cs
GLTFSerialization/Tests/GLTFSerializationTests/: GLTFSerializationTests.csproj  packages.config
GLTFSerialization/cmake/: CMakeMacros.cmake
UnityGLTF/Assets/: CameraFitter.cs  Export-Test.unity  GLTF-Test.unity  Import-Test.unity
UnityGLTF/Assets/UnityGLTF/Editor/Scripts/: U4KSequenceEditor.cs
UnityGLTF/Assets/UnityGLTF/Runtime/: UnityGLTFScripts.asmdef
UnityGLTF/Assets/UnityGLTF/Runtime/Plugins/: GLTFSerialization.dll.mdb
UnityGLTF/Assets/UnityGLTF/Runtime/Plugins/net35/: GLTFSerialization.dll.mdb
UnityGLTF/Assets/UnityGLTF/Runtime/Scripts/: GLTFSceneExporter.cs  GLTFSceneImporter.cs  U4KSequence.cs  U4KSequenceDesc.cs
UnityGLTF/ProjectSettings/: ProjectSettings.asset
UnityGLTF/UserSettings/: EditorUserSettings.asset
UnityGLTF/UserSettings/Layouts/: default-2021.dwlt
